--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,6 +31,18 @@ $colors: (
   dark:       #222
 );
 
+$colors: ( 
+  primary: #000,
+  transparent:transparent,
+  secondary: #C8CCD1,
+  balanced: #000,
+  energized: #482F32,
+  cbrow:#482F32,
+  danger: #f53d3d,
+  light: #FFFFFF,
+  dark: #444444,
+  stable: #F4F4F4
+  );
 
 // App iOS Variables
 // --------------------------------------------------
