--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,26 @@
 page-home {
+    ion-content {
+            background-image: url('../assets/img/home_bg_op.jpg');
+            background-size:cover;
+            background-position: center;
 
+    }
+    ion-navbar {
+        background-color: transparent!important;
+    }
+    .postcode {
+        margin-top:50px;
+    }
+    ion-input {
+        background: #fff;
+        padding: 6px 10px;
+        border-radius:3px;
+    }
+     .logo {
+        margin-top: 20px;
+        text-align: center;
+    }
+    .homeSearch {
+        margin-top:15px;
+    }
 }
