--- a/src/pages/results/results.scss
+++ b/src/pages/results/results.scss
@@ -2,14 +2,14 @@ page-results {
     ion-slides {
         height: inherit!important;
     }
-    ion-avatar img {
-        max-width: 10.6rem!important;
-        max-height: 10.6rem!important;
-        border-radius: 5.8rem!important;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-    }
+    // ion-avatar img {
+    //     max-width: 10.6rem!important;
+    //     max-height: 10.6rem!important;
+    //     border-radius: 5.8rem!important;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     margin-bottom: 10px;
+    // }
     .center {
         text-align: center;
     }
